[gd_scene load_steps=8 format=3 uid="uid://b3tpnkc5xu2o"]

[ext_resource type="Script" uid="uid://cc03vs652r0sh" path="res://addons/godot_tours/bubble/default_bubble.gd" id="1_q308r"]
[ext_resource type="Theme" uid="uid://cx2cxgbadh7fg" path="res://addons/godot_tours/bubble/assets/bubble_theme.tres" id="2_mkok2"]
[ext_resource type="Texture2D" uid="uid://bidxqlunyylhn" path="res://addons/godot_tours/bubble/assets/close.svg" id="3_y6crt"]
[ext_resource type="PackedScene" uid="uid://wd822miy3aij" path="res://addons/godot_tours/bubble/rich_text_label/rich_text_label.tscn" id="4_ev3jl"]
[ext_resource type="Script" uid="uid://c08x426gupagy" path="res://addons/godot_tours/bubble/rich_text_label/rich_text_label.gd" id="6_iitqn"]
[ext_resource type="Texture2D" uid="uid://b6gede2rayspi" path="res://addons/godot_tours/bubble/assets/warning.svg" id="7_1p2ej"]
[ext_resource type="PackedScene" uid="uid://bgxtydff0olev" path="res://addons/godot_tours/bubble/gobot/gobot.tscn" id="8_oayod"]

[node name="Bubble" type="CanvasLayer"]
script = ExtResource("1_q308r")
paragraph_separation = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -151.5
offset_right = 220.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mkok2")

[node name="BackgroundPanelContainer" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"OutlinePanelContainer"

[node name="BackgroundTextureRect" type="TextureRect" parent="PanelContainer/BackgroundPanelContainer"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"PrimaryVBoxContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MainMarginContainer"

[node name="ViewContent" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LabelTitle"
text = "The missing \"walls\""
autowrap_mode = 2

[node name="ButtonClose" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_default_cursor_shape = 2
flat = true

[node name="CloseTextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/HBoxContainer/ButtonClose"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_y6crt")
expand_mode = 1
stretch_mode = 5

[node name="HeaderRichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent" instance=ExtResource("4_ev3jl")]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
text = "The player can move [b]outside of the bridges![/b]
This is normal. In a game, what you see and the physical limits of the world live in two separate layers.
Computer games use simple geometric shapes to control where a character can move, which greatly improves performance.
We call these collision shapes, and our bridge currently doesn't have any."

[node name="MainVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MainVBoxContainer"
theme_override_constants/separation = 8

[node name="TasksMarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"TasksMarginContainer"

[node name="TasksVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/TasksMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ButtonsPanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
theme_type_variation = &"ButtonsPanelContainer"

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/ButtonsPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
text = "BACK"
flat = true

[node name="NextButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/ButtonsPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"NextButton"
shortcut_in_tooltip = false
text = "NEXT"

[node name="FinishButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent/ButtonsPanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"BoxButton"
text = "END TOUR AND CONTINUE LEARNING"

[node name="FooterSpacer" type="Control" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FooterRichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer/ViewContent"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"FooterRichTextLabel"
bbcode_enabled = true
text = "Test text"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("6_iitqn")

[node name="ViewClose" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="LabelCloseTour" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/ViewClose"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "Close the tour?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LabelProgressLost" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/ViewClose"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ProgressLostLabel"
text = "Your progress will be lost."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/ViewClose"]
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"CloseHBoxContainer"
alignment = 1

[node name="ButtonCloseNo" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/ViewClose/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "NO"
flat = true

[node name="ButtonCloseYes" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/ViewClose/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"BoxButton"
shortcut_in_tooltip = false
text = "YES"

[node name="BottomPanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BottomPanelContainer"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer"]
layout_mode = 2
theme_type_variation = &"BottomMarginPanelContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer"]
layout_mode = 2

[node name="StepCountLabel" type="Label" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"StepCountLabel"
text = "5 / 40"
horizontal_alignment = 1

[node name="InfoVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer"]
layout_mode = 2

[node name="InfoTextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("7_1p2ej")
expand_mode = 4
stretch_mode = 4

[node name="InfoRichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "INFO"

[node name="CommitHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="SkipStepButton" type="Button" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer/CommitHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"GrayButton"
shortcut_in_tooltip = false
text = "SKIP STEP"
flat = true

[node name="TryAgainButton" type="Button" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer/CommitHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
text = "TRY AGAIN"
flat = true

[node name="LogsHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="CloseInfoButton" type="Button" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer/LogsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"GrayButton"
shortcut_in_tooltip = false
text = "CLOSE"
flat = true

[node name="FindLogButton" type="Button" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/VBoxContainer/InfoVBoxContainer/LogsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
text = "FIND LOG"
flat = true

[node name="BottomHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BottomHBoxContainer"

[node name="HelpButton" type="Button" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/BottomHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"BottomButton"
flat = true
alignment = 0

[node name="HelpRichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/BottomHBoxContainer/HelpButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"BottomRichTextLabel"
bbcode_enabled = true
text = "[u]Help[/u]"
fit_content = true

[node name="SkipButton" type="Button" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/BottomHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"BottomButton"
flat = true
alignment = 2

[node name="SkipRichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/BottomPanelContainer/PanelContainer/BottomHBoxContainer/SkipButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"BottomRichTextLabel"
bbcode_enabled = true
text = "[right][u]Skip[/u][/right]"
fit_content = true

[node name="OutlinePanelContainer" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"OutlinePanelContainer"
metadata/_edit_lock_ = true

[node name="Avatar" parent="PanelContainer" instance=ExtResource("8_oayod")]
unique_name_in_owner = true
rotation = -0.261799
scale = Vector2(0.35, 0.35)
